entry/src/main/resources/kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: @artifactId@
    version: "@git.commit.id.abbrev@"
    group: @groupId@
  name: @artifactId@
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: @artifactId@
      group: @groupId@

  template:
    metadata:
      labels:
        app: @artifactId@
        version: "@git.commit.id.abbrev@"
        group: @groupId@
      name: @artifactId@
    spec:
      containers:
        - name: @artifactId@
          image: @groupId@/@artifactId@:@git.commit.id.abbrev@
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 20m
          ports:
            - containerPort: 8080
          securityContext:
            privileged: false

        - name: kong
          image: kong/kong-gateway:3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
            - containerPort: 8001
